<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="#616161">
    <Button
        android:onClick="resetScore"
        android:text="@string/reset"
        style="@style/resetbutton" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:textColor="#616161"
            android:weightSum="1"
            tools:context=".MainActivity">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/cowboys" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/team1"
                android:textColor="#616161"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-bold"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="#000000"
                android:textSize="56sp"
                android:textStyle="bold" />
            <Button
                style="@style/CowboysButtonStyle"
                android:onClick="addSevenForCowboys"
                android:text="@string/td" />
            <Button
                style="@style/CowboysButtonStyle"
                android:onClick="addOneForCowboys"
                android:text="@string/pat"/>
            <Button
                style="@style/CowboysButtonStyle"
                android:onClick="addThreeForCowboys"
                android:text="@string/fg"/>
            <Button
                style="@style/CowboysButtonStyle"
                android:onClick="addTwoForCowboys"
                android:text="@string/safety"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.android.courtcounter.MainActivity">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/packers" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/team2"
                android:textColor="#616161"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-bold"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="@color/black"
                android:textSize="56sp"
                android:textStyle="bold" />
            <Button
                style="@style/PackersButtonStyle"
                android:onClick="addSevenForPackers"
                android:text="@string/td" />
            <Button
                style="@style/PackersButtonStyle"
                android:onClick="addOneForPackers"
                android:text="@string/pat" />
            <Button
                style="@style/PackersButtonStyle"
                android:onClick="addThreeForPackers"
                android:text="@string/fg" />
            <Button
                style="@style/PackersButtonStyle"
                android:onClick="addTwoForPackers"
                android:text="@string/safety" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>